<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/dialog_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_title_txt"
            style="@style/dialog_text_view_title"
            android:text="@string/alert_title_txt"
            android:visibility="gone" />

        <TextView
            android:id="@+id/dialog_message_txt"
            style="@style/dialog_text_view"
            android:text="@string/alert_no_net"
            android:textSize="18dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip" >

            <Button
                android:id="@+id/dialog_check_btn"
                style="@style/text_button"
                android:layout_weight="1"
                android:background="@drawable/check_btn_style"
                android:text="@string/check_btn_txt" />

            <Button
                android:id="@+id/dialog_cancel_btn"
                style="@style/text_button"
                android:layout_marginLeft="20dip"
                android:layout_weight="1"
                android:background="@drawable/check_btn_style"
                android:text="@string/cancel_txt" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>