<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/dialog_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_title_txt"
            style="@style/dialog_text_view_title"
            android:text="@string/alert_title_txt" />

        <TextView
            android:id="@+id/dialog_message_txt"
            style="@style/dialog_text_view"
            android:text="@string/alert_no_net" />

        <Button
            android:id="@+id/dialog_check_btn"
            style="@style/text_button"
            android:background="@drawable/check_btn_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dip"
            android:text="@string/check_btn_txt" />
    </LinearLayout>

</LinearLayout>