<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/app_title_bar"/>

    <FrameLayout
        android:id="@+id/main_tab_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@mipmap/all_background" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/edit_or_add_psg_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip"
                        android:layout_marginTop="10dip"
                        android:background="@drawable/shape_rectangle_white"
                        android:orientation="vertical" >

                        <LinearLayout style="@style/one_line_padding_style" >

                            <TextView
                                style="@style/single_line_title_txt"
                                android:text="@string/config_person_name_title" />

                            <EditText
                                android:id="@+id/edit_psg_name_txt"
                                style="@style/edit_text_no_boder"
                                android:layout_marginLeft="10dip"
                                android:hint="@string/edit_text_hint" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/one_line_color_layout_style"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip" />

                        <LinearLayout style="@style/one_line_padding_style" >

                            <TextView
                                style="@style/single_line_title_txt"
                                android:text="@string/config_person_nickname_title" />

                            <EditText
                                android:id="@+id/edit_psg_nickname_txt"
                                style="@style/edit_text_no_boder"
                                android:layout_marginLeft="10dip"
                                android:hint="@string/edit_text_hint" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/one_line_color_layout_style"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip" />

                        <LinearLayout style="@style/one_line_padding_style" >

                            <TextView
                                style="@style/single_line_title_txt"
                                android:text="@string/config_person_mobile_title" />

                            <EditText
                                android:id="@+id/edit_psg_mobile_txt"
                                style="@style/edit_text_no_boder"
                                android:layout_marginLeft="10dip"
                                android:hint="@string/edit_text_hint" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/one_line_color_layout_style"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip" />

                        <LinearLayout style="@style/one_line_padding_style" >

                            <TextView
                                style="@style/single_line_title_txt"
                                android:text="@string/config_person_idType_title" />

                            <TextView
                                android:id="@+id/edit_psg_idType_txt"
                                style="@style/single_line_title_txt"
                                android:layout_width="fill_parent"
                                android:layout_marginLeft="10dip"
                                android:layout_weight="1"
                                android:hint="@string/select_click_txt"
                                android:textColor="@color/flight_gray_txt_color"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/one_line_color_layout_style"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip" />

                        <LinearLayout style="@style/one_line_padding_style" >

                            <TextView
                                style="@style/single_line_title_txt"
                                android:text="@string/config_person_idNumber_title" />

                            <EditText
                                android:id="@+id/edit_psg_idNumber_txt"
                                style="@style/edit_text_no_boder"
                                android:layout_marginLeft="10dip"
                                android:hint="@string/edit_text_hint" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/save_psg_btn"
                         android:layout_width="match_parent"
                        android:layout_height="@dimen/title_bar_height_45"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_18"
                        android:layout_margin="@dimen/font_size_20"
                        android:background="@drawable/bt_bgd"
                        android:text="@string/check_btn_txt" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>